--- a/index.html
+++ b/index.html
@@ -61,19 +61,36 @@ table.memmap th {
 					</p>
                 </section>
                 <section>
-                    <h2>What's a BBC Micro?</h2>
-                    <p>
-                    TODO: story of the beeb
-                    TODO: pic of Beeb
-                    TODO: why
-                    </p>
+                    <section>
+                        <h2>What's a BBC Micro?</h2>
+                        <img class="stretch" src="Beeb.jpeg">
+                        <ul>
+                            <li>BBC Computer Literacy Project</li>
+                            <li>1981</li>
+                        </ul>
+                    </section>
+                    <section>
+                         <img class="stretch" src="BBC_Micro_Elite_screenshot.png">
+                    </section>
+                    <section>
+                         <img class="stretch" src="474053-exile-bbc-micro-screenshot-just-three-of-the-many-different.gif">
+                    </section>
+                    <section>
+                        <h2>Why me?</h2>
+                        <img class="stretch" src="AcornUser1.png">
+                    </section>
+                    <section>
+                        <h2>Why me?</h2>
+                        <img class="stretch" src="AcornUser2.png">
+                    </section>
                 </section>
                 <section>
-                    <h2>What's in a BBC Micro?</h2>
-                    <ul>
-                        <li>2MHz 6502 CPU</li>
-                        <li>32KB RAM / 32KB ROM</li>
-                        <li>Memory-mapped hardware:
+                    <section>
+                        <h2>What's in a BBC Micro?</h2>
+                        <ul>
+                            <li>2MHz 6502 CPU</li>
+                            <li>32KB RAM / 32KB ROM</li>
+                            <li>Memory-mapped hardware:
                             <ul>
                                 <li>Video circuitry</li>
                                 <li>Sound</li>
@@ -81,10 +98,15 @@ table.memmap th {
                                 <li>Floppy disc</li>
                                 <li>ADC</li>
                             </ul>
-                        </li>
-                    </ul>
-                 </section>
-                 <section>
+                            </li>
+                        </ul>
+                    </section>
+                     <section>
+                         <h2>What's inside?</h2>
+                         <img class="stretch" src="circuit-board.jpeg">
+                     </section>
+                </section>
+                <section>
                      <h2>What's in a 6502</h2>
                      <ul>
                          <li>5 8-bit registers:
@@ -340,6 +362,7 @@ function tickTimer1() {
                  </section>
                  <section>
                      <h2>Moo</h2>
+                     pic of elite thing from Bell
                  </section>
 			</div>
 		</div>
